--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,114 +1,138 @@
 {
   "data": [
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
-      "name": "masterPortfolio",
-      "createdAt": "2020-03-06T16:26:54Z",
-      "url": "https://github.com/ashutosh1919/masterPortfolio",
-      "description": "🔥 The Complete Customizable Software Developer Portfolio Template which lets you showcase your work and provides each and every detail about you as Software Developer.",
+      "id": "R_kgDOG_vYgvhHA",
+      "name": "Imgress",
+      "createdAt": "2023-06-13T20:41:33Z",
+      "url": "https://img-ress.netlify.app",
+      "description": "One stop Destination to create, orchestrate and deploy your Image search engine instances within 2 minutes",
       "isFork": false,
       "languages": [
         {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
+          "name": "React",
+          "iconifyClass": "logos-react"
         },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "Dockerfile",
-          "iconifyClass": "simple-icons:docker"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOG_vYHA",
-      "name": "explainable-cnn",
-      "createdAt": "2022-03-13T20:41:33Z",
-      "url": "https://github.com/ashutosh1919/explainable-cnn",
-      "description": "📦 PyTorch based visualization package for generating layer-wise explanations for CNNs.",
-      "isFork": false,
-      "languages": [
         {
           "name": "Python",
           "iconifyClass": "logos-python"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOG0_8uQ",
-      "name": "react-awesome-shapes",
-      "createdAt": "2022-02-11T14:50:20Z",
-      "url": "https://github.com/ashutosh1919/react-awesome-shapes",
-      "description": "🌀 Insert Awesome Shapes into Your React Site with Ease.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
         },
         {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOGcPKSQ",
-      "name": "neuro-symbolic-sudoku-solver",
-      "createdAt": "2021-11-26T17:56:07Z",
-      "url": "https://github.com/ashutosh1919/neuro-symbolic-sudoku-solver",
-      "description": "⚙️ Solving sudoku using Deep Reinforcement learning in combination with powerful symbolic representations.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
+          "name": "Node",
+          "iconifyClass": "devicon-nodejs"
         }
       ]
     },
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjcyMjI5Njk=",
-      "name": "react-awesome-loaders",
-      "createdAt": "2021-01-06T06:36:41Z",
-      "url": "https://github.com/ashutosh1919/react-awesome-loaders",
-      "description": "🚀  High quality, super responsive and completely customisable Loading Animations to insert into your website with single line of code.",
+      "name": "SoulSupport.ai",
+      "createdAt": "2023-09-23T06:36:41Z",
+      "url": "https://github.com/Manan17/SoulSupport.ai",
+      "description": "A 3D mental health companion at your service.",
       "isFork": false,
       "languages": [
         {
+          "name": "React",
+          "iconifyClass": "logos-react"
+        },
+        {
           "name": "JavaScript",
           "iconifyClass": "logos-javascript"
+        },
+        {
+          "name": "Node",
+          "iconifyClass": "devicon-nodejs"
         }
       ]
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
-      "name": "react-liquidswipe",
-      "createdAt": "2021-01-01T08:31:51Z",
-      "url": "https://github.com/ashutosh1919/react-liquidswipe",
-      "description": "🚀 Smooth Liquid Swipe Animation to transition between different components.",
+      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
+      "name": "SwashtyaBuddy",
+      "createdAt": "2022-11-22T16:26:54Z",
+      "url": "https://github.com/Manan17/Rajasthan_IT_Hackathon",
+      "description": "A one stop solution for Chronic Pulmonary Disease Patients to determining Diseases",
       "isFork": false,
+      "languages": [
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        },
+        {
+          "name": "JavaScript",
+          "iconifyClass": "logos-javascript"
+        },
+        {
+          "name": "React",
+          "iconifyClass": "logos-react"
+        }
+      ]
+    },
+    {
+      "id": "R_kgDOG_vYHA",
+      "name": "Dweeter",
+      "createdAt": "2023-01-13T20:41:33Z",
+      "url": "https://github.com/Manan17/Decetralized-Tweeting-System",
+      "description": "A Decentralized Tweeting System which has a voting system (DAO) for removal of fake posts ",
+      "isFork": false,
+      "languages": [
+        {
+          "name": "Solidity",
+          "iconifyClass": "logos-solidity"
+        },
+        {
+          "name": "Ethereum",
+          "iconifyClass": "logos-ethereum"
+        },
+        {
+          "name": "HardHat",
+          "iconifyClass": "devicon-hardhat"
+        },
+        {
+          "name": "React",
+          "iconifyClass": "logos-react"
+        }
+      ]
+    },
+    {
+      "id": "R_kgDOG0_8uQ",
+      "name": "MentorDots",
+      "createdAt": "2022-08-11T14:50:20Z",
+      "url": "https://github.com/Manan17/MENTORDOTS",
+      "description": "'MentorDots' is a software platform for effective mentorship of startups by providing a one-stop solution for connecting experienced mentors with passionate entrepreneurs.",
+      "isFork": true,
       "languages": [
         {
           "name": "JavaScript",
           "iconifyClass": "logos-javascript"
         },
         {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
+          "name": "React",
+          "iconifyClass": "logos-react"
+        },
+        {
+          "name": "Node",
+          "iconifyClass": "devicon-nodejs"
+        }
+      ]
+    },
+    {
+      "id": "R_kgDOGcPKSQ",
+      "name": "BillionAbles",
+      "createdAt": "2022-02-26T17:56:07Z",
+      "url": "https://github.com/Manan17/BillionAbless",
+      "description": "Billion ables is a software where a Differently Abled person can avail various features or tools available in the site and can use any of the tools the availble tools are fingure gesture detection, object detection, text to speech , speech to text , mental health care , font family This all the features are totally working and the chatbot is available on the home page to help the user to solve the problems they are facing while using the app and the instant solution is provided on the problem.",
+      "isFork": true,
+      "languages": [
+        {
+          "name": "React",
+          "iconifyClass": "logos-react"
+        },
+        {
+          "name": "Django",
+          "iconifyClass": "logos-django"
         }
       ]
     }
